--- a/src/html/pages/index.html
+++ b/src/html/pages/index.html
@@ -8,10 +8,10 @@ class: alt
 	<section class="panel banner right">
 		<div class="content color0 span-3-75">
 			<h1 class="major">
-			JAMstack Ethereal
+			Site Fitness
 			</h1>
 			<p>
-			Open-Source application coded in JAMStack pattern on top of Pixelarity Ethereal design.	
+			Site de prezentare sali de fitness / wellness - <a href="{{ data.product }}">comanda site</a>. 
 			</p>
 			<ul class="actions">
 				<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
@@ -25,8 +25,13 @@ class: alt
 	<!-- Panel (Spotlight) -->
 	<section class="panel spotlight medium right" id="first">
 		<div class="content span-7">
-			<h2 class="major">Sed etiam aenean</h2>
-			<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+			<h2 class="major">
+			Despre noi
+			</h2>
+			<p>
+			In cele 8 sali de fitness deschise in ultimii 5 ani oferim servicii de fitness la cele mai inalte standarde.
+			Alege sa fii sanatos urmand un program de fitness gandit special pentru tine.  
+			</p>
 		</div>
 		<div class="image filtered tinted" data-position="top left">
 			<img src="images/pic02.jpg" alt="" />
@@ -36,8 +41,12 @@ class: alt
 	<!-- Panel -->
 	<section class="panel color1">
 		<div class="intro joined">
-			<h2 class="major">Amet lorem</h2>
-			<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+			<h2 class="major">
+			Servciile noastre
+			</h2>
+			<p>
+			Publicul nostru tinta sunt persoanele active care vor sa compenseze munca de birou cu un program de fitness planificat pe termen lung.
+			</p>
 		</div>
 		<div class="inner">
 			<ul class="grid-icons three connected">
@@ -54,8 +63,12 @@ class: alt
 	<!-- Panel (Spotlight) -->
 	<section class="panel spotlight large left">
 		<div class="content span-5">
-			<h2 class="major">Magna amet tempus</h2>
-			<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+			<h2 class="major">
+			Miscare si sanatate
+			</h2>
+			<p>
+			Fitnessul coroborat cu o dieta corespunzatoare poate influenta pozitiv sanatatea si calitatea vietii indiferent de varsta.
+			</p>
 		</div>
 		<div class="image filtered tinted" data-position="top right">
 			<img src="images/pic03.jpg" alt="" />
@@ -65,8 +78,12 @@ class: alt
 	<!-- Panel -->
 	<section class="panel">
 		<div class="intro color2">
-			<h2 class="major">Elit integer</h2>
-			<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+			<h2 class="major">
+			Activtatea nostra
+			</h2>
+			<p>
+			In aceasta sectiune puteti vedea activitatea noastra in imagini. 
+			</p>
 		</div>
 		<div class="gallery">
 			<div class="group span-3">
@@ -89,14 +106,16 @@ class: alt
 	<section class="panel color4-alt">
 		<div class="intro color4">
 			<h2 class="major">Contact</h2>
-			<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+			<p>
+			Daca vrei sa incepi un stil de viata sanatos nu ezita sa ne contactezi prin acest formular de contact.
+			</p>
 		</div>
 		<div class="inner columns divided">
 			<div class="span-3-25">
 				<form method="post" action="#">
 					<div class="fields">
 						<div class="field half">
-							<label for="name">Name</label>
+							<label for="name">Nume</label>
 							<input type="text" name="name" id="name" />
 						</div>
 						<div class="field half">
@@ -104,22 +123,20 @@ class: alt
 							<input type="email" name="email" id="email" />
 						</div>
 						<div class="field">
-							<label for="message">Message</label>
+							<label for="message">Mesaj</label>
 							<textarea name="message" id="message" rows="4"></textarea>
 						</div>
 					</div>
 					<ul class="actions">
-						<li><input type="submit" value="Send Message" class="button primary" /></li>
+						<li><input type="submit" value="Trimite Mesaj" class="button primary" /></li>
 					</ul>
 				</form>
 			</div>
 			<div class="span-1-5">
 				<ul class="contact-icons color1">
-					<li class="icon brands fa-twitter"><a href="#">@untitled-tld</a></li>
-					<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled</a></li>
-					<li class="icon brands fa-snapchat-ghost"><a href="#">@untitled-tld</a></li>
-					<li class="icon brands fa-instagram"><a href="#">@untitled-tld</a></li>
-					<li class="icon brands fa-medium-m"><a href="#">medium.com/untitled</a></li>
+					<li class="icon brands fa-github"><a href="{{ data.github }}">@creare-site</a></li>
+					<li class="icon brands fa-twitter"><a href="{{ data.twitter }}">@websitemarketro</a></li>
+					<li class="icon brands fa-facebook-f"><a href="{{ data.facebook }}">F/websitemarketro</a></li>
 				</ul>
 			</div>
 		</div>
